# Semantic_Perception

./: .gitignore  CMakeLists.txt  README.md  labelsPruned_test.csv  mode_test.csv
Write-Up/: CMU_Assignment.odt
data/GT_vectors/: 0080_GT.csv  0160_GT.csv  0180_GT.csv  0200_GT.csv  0580_GT.csv  0700_GT.csv  0760_GT.csv  0800_GT.csv  0820_GT.csv  1020_GT.csv  1060_GT.csv  1080_GT.csv  1100_GT.csv  1160_GT.csv  1220_GT.csv  1320_GT.csv  1440_GT.csv  1480_GT.csv  1580_GT.csv  1600_GT.csv  1660_GT.csv  1720_GT.csv  1940_GT.csv  2280_GT.csv  2300_GT.csv  2340_GT.csv  2420_GT.csv  2580_GT.csv  2600_GT.csv  2860_GT.csv  3140_GT.csv  3220_GT.csv  3700_GT.csv  3920_GT.csv  4100_GT.csv  4200_GT.csv  4260_GT.csv  4280_GT.csv  4720_GT.csv  4740_GT.csv  (+10 more)
data/Predictions_1/: confusionMatrix.csv  train-test_division1  train-test_division1~
data/Predictions_2/: confusionMatrix.csv  train-test_division2  train-test_division2~
data/Predictions_3/: intermediateConfusionMatrix.csv  train-test_division3  train-test_division3~
data/Predictions_4/: condProb.csv  intermediateConfusionMatrix.csv  train-test_division4  train-test_division4~
data/SLICLabel_vectors/: 0080SLICLabels.csv  0160SLICLabels.csv  0180SLICLabels.csv  0200SLICLabels.csv  0580SLICLabels.csv  0700SLICLabels.csv  0760SLICLabels.csv  0800SLICLabels.csv  0820SLICLabels.csv  1020SLICLabels.csv  1060SLICLabels.csv  1080SLICLabels.csv  1100SLICLabels.csv  1160SLICLabels.csv  1220SLICLabels.csv  1320SLICLabels.csv  1440SLICLabels.csv  1480SLICLabels.csv  1580SLICLabels.csv  1600SLICLabels.csv  1660SLICLabels.csv  1720SLICLabels.csv  1940SLICLabels.csv  2280SLICLabels.csv  2300SLICLabels.csv  2340SLICLabels.csv  2420SLICLabels.csv  2580SLICLabels.csv  2600SLICLabels.csv  2860SLICLabels.csv  3140SLICLabels.csv  3220SLICLabels.csv  3700SLICLabels.csv  3920SLICLabels.csv  4100SLICLabels.csv  4200SLICLabels.csv  4260SLICLabels.csv  4280SLICLabels.csv  4720SLICLabels.csv  4740SLICLabels.csv  (+10 more)
data/SLICSegmentation_arrays/: 0080_segmented.csv  0160_segmented.csv  0180_segmented.csv  0200_segmented.csv  0580_segmented.csv  0700_segmented.csv  0760_segmented.csv  0800_segmented.csv  0820_segmented.csv  1020_segmented.csv  1060_segmented.csv  1080_segmented.csv  1100_segmented.csv  1160_segmented.csv  1220_segmented.csv  1320_segmented.csv  1440_segmented.csv  1480_segmented.csv  1580_segmented.csv  1600_segmented.csv  1660_segmented.csv  1720_segmented.csv  1940_segmented.csv  2280_segmented.csv  2300_segmented.csv  2340_segmented.csv  2420_segmented.csv  2580_segmented.csv  2600_segmented.csv  2860_segmented.csv  3140_segmented.csv  3220_segmented.csv  3700_segmented.csv  3920_segmented.csv  4100_segmented.csv  4200_segmented.csv  4260_segmented.csv  4280_segmented.csv  4720_segmented.csv  4740_segmented.csv  (+10 more)
data/feature_vectors/: 0000_fv.csv  0020_fv.csv  0040_fv.csv  0060_fv.csv  0080_fv.csv  0100_fv.csv  0120_fv.csv  0140_fv.csv  0160_fv.csv  0180_fv.csv  0200_fv.csv  0220_fv.csv  0240_fv.csv  0260_fv.csv  0280_fv.csv  0300_fv.csv  0320_fv.csv  0340_fv.csv  0360_fv.csv  0380_fv.csv  0400_fv.csv  0420_fv.csv  0440_fv.csv  0460_fv.csv  0480_fv.csv  0500_fv.csv  0520_fv.csv  0540_fv.csv  0560_fv.csv  0580_fv.csv  0600_fv.csv  0620_fv.csv  0640_fv.csv  0660_fv.csv  0680_fv.csv  0700_fv.csv  (+274 more)
devel/: CMakeCache.txt  Makefile  Semantic_Perception.cbp  arma_test  cmake_install.cmake
docs/: explanation.md
include/: FindLibXml2.cmake~
scripts/: FV_Extraction  FV_Extraction~  GT_SLICLabel_Extraction  GT_SLICLabel_Extraction_AllLabeled~  evaluations  evaluations_superpixel  kNN_Predictions
src/: GT_SLICLabels_extraction.cpp  arma_test.cpp  create_confusionMatrices.cpp  decision_stump.cpp  eval.cpp  eval_superpixel.cpp  features_slic.cpp  io_test.cpp  kNN.cpp  logistic.cpp  nbc.cpp  perceptron.cpp  seeded_test.cpp  slic_test.cpp  slic_test_original.cpp  watershed_test.cpp
(+547 files in other folders)
